Update success pages with color-coded rating card and Spanish translations
- Replace 'Positional ratings' text with color-coded card showing overall rating
- Card uses app-wide color scheme: green (>=2.75), yellow (>=1.75), red (<1.75)
- Add Spanish translations for all success page text
- Calculate and display overall rating for positional ratings submissions
- Update SubmissionSummary type to include overallRating field

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -17,6 +17,11 @@
     "subtitle": "Capture positional ratings and discipline infractions quickly from any device."
   },
   "submitting": "Submitting…",
-  "proceed": "Proceed"
+  "proceed": "Proceed",
+  "success": {
+    "title": "Submission recorded",
+    "backToHome": "Back to home",
+    "overallRating": "Overall Rating"
+  }
 }
 
