Remove rating scale from PWA form, update PEAClassic rating scale, add Spanish translations
- Remove incorrectly added rating scale graphic from PositionalRatingsForm
- Update PEARubric component to accept and use location-specific thresholds
- Update PEAClassic to fetch thresholds and pass to PEARubric and RatingCell
- Update all RatingCell usages in PEAClassic to use location-specific thresholds
- Add Spanish translations for feedback reminder card (feedbackTitle, feedbackBody)
- Fix feedback card to properly highlight employee name in green

--- a/locales/en/forms.json
+++ b/locales/en/forms.json
@@ -35,7 +35,9 @@
       "notYet": "Not Yet",
       "onTheRise": "On the Rise",
       "crushingIt": "Crushing It"
-    }
+    },
+    "feedbackTitle": "Did you share this feedback?",
+    "feedbackBody": "Make sure {{name}} knows the WHY."
   }
 }
 
