docs: Add screenshots to documentation pages
- Add 9 screenshots showing key app features:
  - Login page
  - Dashboard home
  - Positional Excellence overview and classic view
  - Discipline dashboard
  - Roster management
  - Organization Settings (positions, users, roles)
- Update documentation pages to embed relevant screenshots
- Screenshots taken from demo account (location 20001)

--- a/docs/discipline/overview.mdx
+++ b/docs/discipline/overview.mdx
@@ -45,6 +45,8 @@ Your organization may have different thresholds and actions configured. Check Or
 
 The Discipline Dashboard shows:
 
+![Discipline Dashboard showing employee infractions, points, and recommended disciplinary actions](/images/screenshots/discipline-dashboard.png)
+
 ### Employee List
 
 All team members with their current discipline status:
