--- a/docs/getting-started/first-login.mdx
+++ b/docs/getting-started/first-login.mdx
@@ -28,6 +28,8 @@ Leaders can also access certain features through the mobile Progressive Web App.
 3. Enter your temporary password (provided by your administrator)
 4. Click **Sign In**
 
+![Levelset login page showing email and password fields with Sign In button](/images/screenshots/login-page.png)
+
 <Note>
   If you received a temporary password, you'll want to change it after your first login for security.
 </Note>
@@ -46,6 +48,8 @@ The home page provides an overview of key metrics:
 
 - **360 Overview** - High-level performance indicators
 - **Operational Excellence** - Metrics for guest experience areas
+
+![Levelset home dashboard showing 360 Overview with Positional Excellence and Discipline Points](/images/screenshots/dashboard-home.png)
 
 ### Selecting a Location
 
