--- a/docs/organization-settings/overview.mdx
+++ b/docs/organization-settings/overview.mdx
@@ -12,6 +12,8 @@ Organization Settings is where you configure how Levelset works for your organiz
 1. Click the profile icon in the top-right corner of the navigation
 2. Select **Organization Settings** from the dropdown
 
+![Organization Settings page showing sidebar navigation and Positional Excellence configuration](/images/screenshots/org-settings.png)
+
 ## Settings Sections
 
 Organization Settings is organized into groups:
