--- a/docs/organization-settings/roles.mdx
+++ b/docs/organization-settings/roles.mdx
@@ -12,6 +12,8 @@ Roles define the permission hierarchy in your organization. Configure role names
 1. Go to **Organization Settings**
 2. Select **Roles** in the **Users and Security** section
 
+![Roles settings page showing role hierarchy with tier levels, colors, and employee counts](/images/screenshots/org-settings-roles.png)
+
 ## Understanding the Role Hierarchy
 
 Roles are organized from highest to lowest permission level:
