--- a/docs/organization-settings/users.mdx
+++ b/docs/organization-settings/users.mdx
@@ -12,6 +12,8 @@ The Users settings page controls who can log into the Levelset dashboard. This i
 1. Go to **Organization Settings**
 2. Select **Users** in the **Users and Security** section
 
+![Users settings page showing Leadership Team and Administrative Users sections](/images/screenshots/org-settings-users.png)
+
 ## Understanding Users vs Employees
 
 | Concept | Description |
