--- a/docs/positional-excellence/overview.mdx
+++ b/docs/positional-excellence/overview.mdx
@@ -44,6 +44,8 @@ The thresholds for these labels can be customized by your organization.
 
 The Positional Excellence dashboard offers three main views:
 
+![Positional Excellence Dashboard showing ratings overview with FOH/BOH toggle and employee ratings](/images/screenshots/pea-overview.png)
+
 <Tabs>
   <Tab title="Overview">
     Shows all employees with their average ratings across positions. 
