--- a/docs/positional-excellence/pea-classic.mdx
+++ b/docs/positional-excellence/pea-classic.mdx
@@ -25,6 +25,8 @@ Access directly at `/positional-excellence-classic` on your Levelset domain.
 
 The PEA Classic view displays:
 
+![PEA Classic view showing spreadsheet-style grid with employee names, positions, and color-coded ratings](/images/screenshots/pea-classic.png)
+
 ### Rating Grid
 
 A spreadsheet-style grid showing:
