--- a/docs/roster-management/overview.mdx
+++ b/docs/roster-management/overview.mdx
@@ -13,6 +13,8 @@ Navigate to **Roster** in the main navigation to view and manage your team.
 
 ## What You'll See
 
+![Roster Management page showing employee table with roles, FOH/BOH assignments, and availability](/images/screenshots/roster.png)
+
 ### Employee Table
 
 The roster displays all employees in a sortable, filterable table:
